--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,35 +1,8 @@
 /* https://gwfh.mranftl.com/
+or
+https://fonts.google.com/
+
 open-sans-regular - latin_cyrillic */
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  src: url("./open-sans-v34-latin_cyrillic-regular.eot"); /* IE9 Compat Modes */
-  src: local(""), url("./open-sans-v34-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"), url("./open-sans-v34-latin_cyrillic-regular.woff2") format("woff2"), url("./open-sans-v34-latin_cyrillic-regular.woff") format("woff"), url("./open-sans-v34-latin_cyrillic-regular.ttf") format("truetype"), url("./open-sans-v34-latin_cyrillic-regular.svg#OpenSans") format("svg"); /* Legacy iOS */
-}
-/* open-sans-700 - latin_cyrillic */
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  src: url("./open-sans-v34-latin_cyrillic-700.eot"); /* IE9 Compat Modes */
-  src: local(""), url("./open-sans-v34-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"), url("./open-sans-v34-latin_cyrillic-700.woff2") format("woff2"), url("./open-sans-v34-latin_cyrillic-700.woff") format("woff"), url("./open-sans-v34-latin_cyrillic-700.ttf") format("truetype"), url("./open-sans-v34-latin_cyrillic-700.svg#OpenSans") format("svg"); /* Legacy iOS */
-}
-/* open-sans-italic - latin_cyrillic */
-@font-face {
-  font-family: "Open Sans";
-  font-style: italic;
-  font-weight: 400;
-  src: url("./open-sans-v34-latin_cyrillic-italic.eot"); /* IE9 Compat Modes */
-  src: local(""), url("./open-sans-v34-latin_cyrillic-italic.eot?#iefix") format("embedded-opentype"), url("./open-sans-v34-latin_cyrillic-italic.woff2") format("woff2"), url("./open-sans-v34-latin_cyrillic-italic.woff") format("woff"), url("./open-sans-v34-latin_cyrillic-italic.ttf") format("truetype"), url("./open-sans-v34-latin_cyrillic-italic.svg#OpenSans") format("svg"); /* Legacy iOS */
-}
-/* open-sans-700italic - latin_cyrillic */
-@font-face {
-  font-family: "Open Sans";
-  font-style: italic;
-  font-weight: 700;
-  src: url("./open-sans-v34-latin_cyrillic-700italic.eot"); /* IE9 Compat Modes */
-  src: local(""), url("./open-sans-v34-latin_cyrillic-700italic.eot?#iefix") format("embedded-opentype"), url("./open-sans-v34-latin_cyrillic-700italic.woff2") format("woff2"), url("./open-sans-v34-latin_cyrillic-700italic.woff") format("woff"), url("./open-sans-v34-latin_cyrillic-700italic.ttf") format("truetype"), url("./open-sans-v34-latin_cyrillic-700italic.svg#OpenSans") format("svg"); /* Legacy iOS */
-}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 /*# sourceMappingURL=fonts.css.map */
